<resources>
    <string name="app_name">LabExam02</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_Expense">Add Expense</string>
    <string name="title_Expenses">Expenses</string>
    <string name="title_Home">Home</string>
    <string name="card_Day" />
    <string name="cash">Cash</string>
    <string name="shopping">Shopping</string>
    <string name="Add_New_Expenses">Add New Expenses</string>
    <string name="Add_New_Income">Add New Income</string>
    <string name="Update_the_Transaction">Update the Transaction</string>
    <string name="Rupees">Rs</string>
    <string name="amount">1820.00</string>
    <string name="Stats">Stats</string>
    <string name="Expenses">Expenses</string>
    <string name="Week">Week</string>
    <string name="Transportation">Transportation</string>
    <string name="Cash">Cash</string>
    <string name="Gifts">Gifts</string>
    <string name="Card">Card</string>
    <string name="Food">Food</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Update_Your_Profile">Update Your Profile</string>
    <string name="Name">Name</string>
    <string name="Enter_your_Name">Enter your Name</string>
    <string name="Email">Email</string>
    <string name="Enter_E_mail">Enter E mail</string>
    <string name="Contact_No">Contact No</string>
    <string name="Enter_contact_No">Enter contact No</string>
    <string name="Update">Update</string>
    <string name="Cancel">Cancel</string>
    <string name="Achievements">Achievements</string>
    <string name="Add_your_amount_here">Add Your Amount Here</string>
    <string name="Add_Expense_Title">Add Expense Title Here</string>
    <string name="Add_Income_Title">Add Income Title Here</string>
    <string name="Update_Title">Update Title </string>

    <string-array name="ExpenseOrIncomeArray">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="category">
        <item>Shopping</item>
        <item>Transport</item>
        <item>Food</item>
        <item>Gifts</item>
    </string-array>
    <string-array name="Incomecategory">
        <item>Salary</item>
        <item>Freelancing</item>
    </string-array>

</resources>