<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.46"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/payment_type_container">

    <!-- Add New Expenses Label -->
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="60dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <!-- Amount Display -->
    <TextView
        android:id="@+id/label_add_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Update_the_Transaction"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_type_container" />

    <EditText
        android:id="@+id/UpdateIncomeTitle"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/Add_Income_Title"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/UpdateIncomeAmount"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edit_text_background"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/Add_your_amount_here"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:background="@drawable/edit_text_background">

        <TextView
            android:id="@+id/textViewDateUpdate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Select a date"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/edit_text_background"/>

        <ImageView
            android:id="@+id/imageViewCalendarUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>

    </LinearLayout>



    <Button
        android:id="@+id/buttonUpdateTransaction"
        android:layout_marginTop="350dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update" />
    <Button
        android:id="@+id/buttoncancellTransaction"
        android:layout_marginTop="350dp"
        android:layout_marginStart="125dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" />
</FrameLayout>

</FrameLayout>