<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.46"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/payment_type_container">

    <!-- Add New Expenses Label -->

    <!-- Amount Display -->
    <TextView
        android:id="@+id/label_add_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Add_New_Income"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_type_container" />

    <EditText
        android:id="@+id/editIncomeTitle"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/Add_Income_Title"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editIncomeAmount"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/edit_text_background"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/Add_your_amount_here"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:background="@drawable/edit_text_background">

        <TextView
            android:id="@+id/textViewIncomeDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Select a date"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/edit_text_background"/>

        <ImageView
            android:id="@+id/imageViewIncomeCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/incomeCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/shopping_spinner"
        android:ems="10"
        android:entries="@array/Incomecategory"
        android:hint="@string/Add_your_amount_here"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonIncomeSubmit"
        android:layout_marginTop="450dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" />

</FrameLayout>